--- a/app/assets/stylesheets/front/application-theme-ind.scss
+++ b/app/assets/stylesheets/front/application-theme-ind.scss
@@ -13,12 +13,12 @@ $cover-size: 130px; // Pixels
 $cover-text-alignment: left; // text-align value
 
 $header-menu-items-separator: false; // Boolean
-$header-background-colour: 'dark'; // String: «dark», «grey», «white»
+$header-background-color: 'dark'; // String: «dark», «grey», «white»
 $header-background-transparency: 'semi'; // String: «solid», «semi», «transparent»
 
-$footer-background-colour: 'dark'; // String: «dark», «grey», «accent-color»
-$footer-text-colour: 'white'; // String: «white», «accent-color»
-$footer-links-colour: 'white'; // String: «white», «accent-color»
+$footer-background-color: 'dark'; // String: «dark», «grey», «accent-color»
+$footer-text-color: 'white'; // String: «white», «accent-color»
+$footer-links-color: 'white'; // String: «white», «accent-color»
 
 
 @import
