Remove the previous templates

--- a/app/assets/stylesheets/front/_template-default.css.scss.erb
+++ b/app/assets/stylesheets/front/_template-default.css.scss.erb
@@ -2,6 +2,8 @@
   $<%= property %>: <%= value %>;
 <% end %>
 
+$template: 'default';
+
 @import
 '../../../node_modules/widget-editor/dist/styles.min',
 '../../../node_modules/rc-slider/assets/index',
