--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700" rel="stylesheet">
   <% end %>
 
-  <%= stylesheet_link_tag 'front/application-theme-fa', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('Forest Atlas')) %>
-  <%= stylesheet_link_tag 'front/application-theme-lsa', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('Landscape Application')) %>
-  <%= stylesheet_link_tag 'front/application-theme-carpe', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('CARPE Landscape')) %>
+  <%= stylesheet_link_tag 'front/application-theme-default', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('Default')) %>
   <%= stylesheet_link_tag 'front/application-theme-ind', media: 'all', 'data-turbolinks-track': 'reload' if (Rails.env.development? && @site_page.site_template.name.eql?('INDIA')) %>
 
   <%= stylesheet_link_tag "front/sites/#{@site_page.site.id}.css", media: 'all', 'data-turbolinks-track': 'reload' unless Rails.env.development?%>
@@ -29,7 +27,7 @@
   <%= favicon_link_tag unless @favico %>
   <%= yield :head %>
   <script>
-    window.template = '<%= (@site_page.site_template.name.eql? 'Forest Atlas') ? 'fa' : (@site_page.site_template.name.eql? 'CAPRE Landscape') ? 'ca' : 'lsa' %>';
+    window.template = '<%= (@site_page.site_template.name.eql? 'Default') ? 'default' : 'india' %>';
   </script>
   <script type="text/javascript">
     window.liveSettings = {
