--- a/app/views/management/dataset_steps/options.html.erb
+++ b/app/views/management/dataset_steps/options.html.erb
@@ -3,8 +3,8 @@
 <div class="c-extended-header">
   <div class="wrapper">
     <div class="description">
-      <h1>Metadata</h1>
-      <p />
+      <h1>Aliases</h1>
+      <p>Assign aliases and descriptions to the columns of your dataset to help users better understand them in the dashboards and widgets.</p>
     </div>
   </div>
 </div>
@@ -13,12 +13,13 @@
 <%= Gon::Base.render_data %>
 
 <%= form_for @dataset, url: wizard_path, method: :put do |f| %>
-  <%= react_component('ManagementDatasetMetadata', {
-    languages: @languages,
+  <%= react_component('ManagementDatasetAliases', {
+    metadataId: @metadata_id,
     defaultLanguage: @default_language,
-    metadata: @metadata
+    columns: @metadata_columns
   }) %>
 
-  <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_site_datasets_path(@site.slug)} %>
+  <%= render partial: 'management/steps_shared/footer', locals: { f: f, cancel: management_site_datasets_path(@site.slug), no_continue: true} %>
 <% end %>
+
 <%= render partial: 'shared/errors', locals: { resource: @dataset } %>
