Change Site creation/edition tabs and added new steps for the content

--- a/app/views/admin/site_steps/_footer.html.erb
+++ b/app/views/admin/site_steps/_footer.html.erb
@@ -3,7 +3,9 @@
     <%= link_to 'Cancel', admin_sites_path, class: 'c-button -outline -dark-text' %>
     <div>
       <% if @site.id %>
-        <%= f.button Admin::SiteStepsController::CONTINUE, value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button -outline -dark-text' %>
+        <% unless local_assigns[:no_continue] %>
+          <%= f.button Admin::SiteStepsController::CONTINUE, value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button -outline -dark-text' %>
+        <% end %>
         <%= f.button Admin::SiteStepsController::SAVE, value: Admin::SiteStepsController::SAVE, type: 'submit', method: :put, class: 'c-button' %>
       <% else %>
         <%= f.button Admin::SiteStepsController::CONTINUE, value: Admin::SiteStepsController::CONTINUE, type: 'submit', method: :put, class: 'c-button' %>
