Add migration task for site settings

--- a/app/assets/stylesheets/components/shared/c-tabs.scss
+++ b/app/assets/stylesheets/components/shared/c-tabs.scss
@@ -67,7 +67,7 @@
           left: 0;
           height: 4px;
           width: 100%;
-          background-color: $color-1;
+          background-color: $accent-color;
           content: '';
         }
       }
