Change the size of some input fields

--- a/app/views/admin/site_steps/settings.html.erb
+++ b/app/views/admin/site_steps/settings.html.erb
@@ -79,7 +79,7 @@
                   <%= settings_form.hidden_field :position, value: '16' %>
                   <%= settings_form.hidden_field :name, value: 'transifex_api_key' %>
 
-                  <div class="container -big">
+                  <div class="container">
                     <%= settings_form.label 'Transifex API key', for: 'transifex_api_key' %>
                     <%= settings_form.text_field :value, id: 'transifex_api_key' %>
                   </div>
@@ -91,7 +91,7 @@
                   <%= settings_form.hidden_field :position, value: '10' %>
                   <%= settings_form.hidden_field :name, value: 'pre_footer' %>
 
-                  <div class="container -big">
+                  <div class="container">
                     <%= settings_form.label 'Pre-footer', for: 'pre_footer' %>
                     <%= settings_form.text_area :value, id: 'pre_footer' %>
                   </div>
@@ -100,7 +100,7 @@
                   <%= settings_form.hidden_field :position, value: '11' %>
                   <%= settings_form.hidden_field :name, value: 'analytics_key' %>
 
-                  <div class="container -big">
+                  <div class="container">
                     <%= settings_form.label 'Analytics key', for: 'analytics_key' %>
                     <%= settings_form.text_field :value, id: 'analytics_key' %>
                   </div>
@@ -109,7 +109,7 @@
                   <%= settings_form.hidden_field :position, value: '12' %>
                   <%= settings_form.hidden_field :name, value: 'keywords' %>
 
-                  <div class="container -big">
+                  <div class="container">
                     <%= settings_form.label 'Keywords', for: 'keywords' %>
                     <%= settings_form.text_area :value, id: 'keywords' %>
                   </div>
@@ -118,7 +118,7 @@
                   <%= settings_form.hidden_field :position, value: '13' %>
                   <%= settings_form.hidden_field :name, value: 'contact_email_address' %>
 
-                  <div class="container -big">
+                  <div class="container">
                     <%= settings_form.label 'Contact email address', for: 'contact_email_address' %>
                     <%= settings_form.text_field :value, id: 'contact_email_address' %>
                   </div>
@@ -127,7 +127,7 @@
                   <%= settings_form.hidden_field :position, value: '14' %>
                   <%= settings_form.hidden_field :name, value: 'hosting_organization' %>
 
-                  <div class="container -big">
+                  <div class="container">
                     <%= settings_form.label 'Hosting organization', for: 'hosting_organization' %>
                     <%= settings_form.text_field :value, id: 'hosting_organization' %>
                   </div>
