Hide the logo of the map report

--- a/app/assets/stylesheets/layouts/front/map-builder-specifics.scss
+++ b/app/assets/stylesheets/layouts/front/map-builder-specifics.scss
@@ -28,3 +28,11 @@
 .documents-table__link a {
   padding: 0px;
 }
+
+.report-header__logo-container {
+  display: none;
+}
+
+.report-header__title-container .report-header__title {
+  margin-left: 1.25rem;
+}
