Fix bugs on site settings creation and edition

--- a/app/assets/javascripts/templates/admin/flag-colors.hbs
+++ b/app/assets/javascripts/templates/admin/flag-colors.hbs
@@ -1,6 +1,6 @@
 <input type="hidden" id="{{inputId}}_value" name="{{inputName}}[value]" value="{{colorsValue}}" class="js-colors-input">
-<input type="hidden" id="{{inputId}}_name" name="{{inputName}}[name]" value="flag">
-<input type="hidden" id="{{inputId}}_position" name="{{inputName}}[position]" value="4">
+<input type="hidden" id="{{inputId}}_name" name="{{inputName}}[name]" value="{{colorsName}}">
+<input type="hidden" id="{{inputId}}_position" name="{{inputName}}[position]" value="{{colorsPosition}}">
 <div class="c-flag-colors">
   {{#each colors}}
     <div>
