--- a/app/views/admin/site_steps/content.html.erb
+++ b/app/views/admin/site_steps/content.html.erb
@@ -118,7 +118,7 @@
       </div>
     </div>
   </div>
-  <%= render partial: 'footer', locals: { f: f, no_continue: true} %>
+  <%= render partial: 'footer', locals: { f: f, no_continue: !@site.persisted?, last_step: true } %>
 <% end %>
 
 
